Closed Bug 304374 Opened 21 years ago Closed 20 years ago

|nsCOMPtr<nsIInterfaceInfoManager> iim = XPTI_GetInterfaceInfoManager()| leaks

Categories

(Core Graveyard :: XTF, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: peterv, Assigned: peterv)

Details

(Keywords: memory-leak)

Attachments

(1 file)

There's a couple of places in the tree where we do: nsCOMPtr<nsIInterfaceInfoManager> iim = XPTI_GetInterfaceInfoManager(); which leaks because XPTI_GetInterfaceInfoManager addrefs its return value.
Attached patch v1Splinter Review
This fixes those leaks in content/xtf and in extensions/java.
Attachment #192437 - Flags: superreview?(jst)
Attachment #192437 - Flags: review?(jst)
Attachment #192437 - Flags: superreview?(jst)
Attachment #192437 - Flags: superreview+
Attachment #192437 - Flags: review?(jst)
Attachment #192437 - Flags: review+
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #192437 - Flags: approval1.8.1?
Attachment #192437 - Flags: approval1.8.0.1?
This looks like it's just a leaked refcount of a singleton.
Attachment #192437 - Flags: approval1.8.1?
Attachment #192437 - Flags: approval1.8.0.1?
If this is a problem lxr shows other calls, in mozilla/extensions/python and mozilla/java/xpcom (why is there both extensions/java/xpcom and java/xpcom?). Correct me if I'm wrong, but there's only ever one xptiInterfaceInfoManager right?
Yes, this is a singleton and this function has been removed on the trunk.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: