Fix for bug 304374 (|nsCOMPtr<nsIInterfaceInfoManager> iim = XPTI_GetInterfaceInfoManager()| leaks). r/sr=jst.